--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <section class="top-banner">
+    <div class="half-width">
+        <h1>Welcome to</h1>
+        <h1 class="orange-color">Ruhul Muazzam Rafat</h1>
+        <h3>I am a student of B.A. hons</h3>
+        <p>I am Ruhul Muazzam Rafat. I read in University of Rajshahi. I live in Bolshijonj, Jamalpur. I have one sister and one brother. My sister is elder than me and my brother is younger than me. I am trying to make a website as a beginer. I wii be a full stok web developer inshaallah.</p>
+        <a class="link-button" target="_blank" href="https://web.facebook.com/rohulmuazzam.rafat">Hire Me</a>
+       </div>
+        <div class="half-width">
+            <img src="my image/rafatedited.png.png" alt="">
+        </div>
+  </section>
 </body>
 </html>
