--- a/index.html
+++ b/index.html
@@ -20,5 +20,18 @@
             <img src="my image/rafatedited.png.png" alt="">
         </div>
   </section>
+  <section class="second-banner">
+    <div class="half-width">
+      <img src="my image/rafat3edited.png.png" alt="">
+    </div>
+    <div class="half-width">
+      <h1>This is my</h1>
+      <h1>first website</h1>
+      <h3>I will be a web developer inshaallah</h3>
+      <p>I am Ruhul Muazzam Rafat. I read in University of Rajshahi. I live in Bolshijonj, Jamalpur. I have one sister and one brother. My sister is elder than me and my brother is younger than me. I am trying to make a website as a beginer. I wii be a full stok web developer inshaallah.</p>
+      <a class="link-button" target="_blank" href="https://web.facebook.com/?_rdc=1&_rdr">Download</a>
+    </div>
+
+  </section>
 </body>
 </html>
